--- a/wing-chun-dummy/about-us.html
+++ b/wing-chun-dummy/about-us.html
@@ -5,7 +5,7 @@
 <title>About Us</title>
 <meta name="title" content="About Us">
 <meta name="DC.title" lang="en" content="About Us ">
-<meta name="description" content="{Wing Chun, a traditional Chinese martial art, is well-known for its focus on close-range battle, effective movements, and practical self-defense techniques.|Wing Chun is a traditional Chinese Martial Art that emphasizes close-range combat and effective moves. ">
+<meta name="description" content="{Wing Chun, a traditional Chinese martial art, is well-known for its emphasis on close-range fighting, quick moves, and practical self-defense methods.|Wing Chun is a traditional Chinese Martial Art that emphasizes the use of close-range combat as well as efficient moves. ">
 <meta name="keywords" content="Understanding the Wing Chun Dummy: A Comprehensive Guide">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -18,74 +18,74 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.a852844499273299ac089b269e0e5b54a{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.navbar a{
-font-size: 17.9px!important;
-font-weight: bold;
+.v09e65acca9ec645a39b92c4cd4bf93fb{
+border: 1px solid #617e8c2f;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f4f2ee;
 }
 .btn-md{
-padding: 14.6px 30.3px;
+padding: 15px 29.8px;
 border-radius: 0;
 }
-.w2535aadeeecd59f9ee260cb22a9c69b6 p,.w2535aadeeecd59f9ee260cb22a9c69b6 span,.w2535aadeeecd59f9ee260cb22a9c69b6 label{
-font-size:16px!important;
-}
-a{
-text-decoration: none!important;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.wbb10fc1668e8b1168c5f2b9ee6b480ae a,.w2535aadeeecd59f9ee260cb22a9c69b6 a{
-color:#030303!important;
-text-decoration: underline !important;
+footer *{
+font-size:16px !important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
+.nav-link{
+color: #000000!important;
+
+}
+.nav-item{
+padding-left:8px;
+padding-right:7.9px;
+padding-top:5.4px;
+padding-bottom:4.8px;
+}
 *{
 font-family: 'Kumbh Sans', sans-serif;
+}
+.za131adf750494274a650ed3030b91c63{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.adfc59b9ea6bb3f584c7e5822b2df1870 a{
+font-size:16px;
+}
+.adfc59b9ea6bb3f584c7e5822b2df1870 p,.adfc59b9ea6bb3f584c7e5822b2df1870 span,.adfc59b9ea6bb3f584c7e5822b2df1870 label{
+font-size:16px!important;
 }
 html{
 scroll-behavior: smooth;
 }
-footer{
-background:#121212;
-color:#ffffff;
+.wa67c22db48ad236d6c9250eb1db11057:hover{
+box-shadow: 0 50.5px 50.3px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.bad0a00ef69321792d900ca04ea18cc15 a,.adfc59b9ea6bb3f584c7e5822b2df1870 a{
+color:#020202!important;
+text-decoration: underline !important;
+}
+.navbar a{
+font-size: 17.9px!important;
+font-weight: bold;
 }
 ul{
 list-style: circle;
 }
-.w2535aadeeecd59f9ee260cb22a9c69b6 a{
-font-size:16px;
+footer{
+background:#0a0a0a;
+color:#ffffff;
 }
-.wbb10fc1668e8b1168c5f2b9ee6b480ae p,.wbb10fc1668e8b1168c5f2b9ee6b480ae a,.wbb10fc1668e8b1168c5f2b9ee6b480ae span,.wbb10fc1668e8b1168c5f2b9ee6b480ae label{
+a{
+text-decoration: none!important;
+}
+.bad0a00ef69321792d900ca04ea18cc15 p,.bad0a00ef69321792d900ca04ea18cc15 a,.bad0a00ef69321792d900ca04ea18cc15 span,.bad0a00ef69321792d900ca04ea18cc15 label{
 font-size:16px!important;
-}
-.nav-item{
-padding-left:8px;
-padding-right:8.4px;
-padding-top:5.5px;
-padding-bottom:4.8px;
-}
-.yf4b403000bb328beab2ed4d9b9237f56{
-border: 1px solid #65829033;
-border-radius: 5px;
-padding: 20px 20px;
-background: #faf8f4;
-}
-footer *{
-font-size:16px !important;
-}
-.u76d0563d45eccb22fae6b16d7ae67756:hover{
-box-shadow: 0 49.7px 50.2px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
 }
 </style>
 
@@ -115,10 +115,10 @@ transform: rotate(-2deg) scale(1.03);
 <nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/wing-chun-practicioner.png" src="img/wing-chun-practicioner.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="navbar-nav align-items-center ml-auto d-flex"><li class=" nav-item">
-<a class="de059ee9ca0f97f592903ea957449443a nav-link" href="index.html"  >Understanding the Wing Chun Dummy: A Comprehensive Guide</a>
-</li><li class="nav-item"><a class="nav-link de059ee9ca0f97f592903ea957449443a" rel=nofollow href="about-us.html">About Us</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="ml-auto d-flex align-items-center navbar-nav"><li class="nav-item ">
+<a class="y2a22092c2687573fb12813b06969c06b nav-link" href="index.html"  >Understanding the Wing Chun Dummy: A Comprehensive Guide</a>
+</li><li class="nav-item"><a class="y2a22092c2687573fb12813b06969c06b nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -131,7 +131,7 @@ transform: rotate(-2deg) scale(1.03);
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 yf4b403000bb328beab2ed4d9b9237f56">
+<div class="col-md-12 mb-3 v09e65acca9ec645a39b92c4cd4bf93fb">
 <div class="row-item d-flex align-left">
 <div><p>Explore the world of Wing Chun and its iconic training apparatus, the Wing Chun Dummy, in this detailed article. Tailored for both martial arts practitioners and enthusiasts alike, the piece answers five pivotal questions about the Wing Chun Dummy. It delves into the dummy&#39;s design and purpose, illustrates how it enhances martial arts skills such as precision, strength, and reaction, and explains the various drills and forms that can be practiced with it. Additionally, the article highlights the dummy&#39;s role in self-defense training and offers practical advice for beginners on starting their journey with this traditional training tool. This informative read serves as an excellent guide for anyone interested in the art of Wing Chun or seeking a deeper understanding of martial arts training methodologies.</p>
 </div>
@@ -143,21 +143,21 @@ transform: rotate(-2deg) scale(1.03);
 </div>
 </div>
 <footer>
-<div class="pt-5 py-4 container" >
+<div class="container pt-5 py-4" >
 <div class="row"><div class="col-lg-3">
 <p>myKarateStore.com</p>
 <p>Phone : (720)593-9512</p>
 <p>Email : sales@mykaratestore.com</p>
-<p>Company Website : <a class="de059ee9ca0f97f592903ea957449443a" href="https://www.mykaratestore.com/1" rel="nofollow">https://www.mykaratestore.com/1</a></p>
-</div><div class="col-lg-3"><p><a class="de059ee9ca0f97f592903ea957449443a" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="de059ee9ca0f97f592903ea957449443a" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="de059ee9ca0f97f592903ea957449443a" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="y2a22092c2687573fb12813b06969c06b" href="https://www.mykaratestore.com/1" rel="nofollow">https://www.mykaratestore.com/1</a></p>
+</div><div class="col-lg-3"><p><a class="y2a22092c2687573fb12813b06969c06b" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="y2a22092c2687573fb12813b06969c06b" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="y2a22092c2687573fb12813b06969c06b" href="about-us.html" rel="nofollow">About Us</a></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/Mykaratestore/" class="facebook ye31d94796060ec49123de39b336928fe" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://twitter.com/myKarateStore" class="ye31d94796060ec49123de39b336928fe twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/Mykaratestore/" class="y53bc8d43b7fced0186f364467e2785b2 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://twitter.com/myKarateStore" class="y53bc8d43b7fced0186f364467e2785b2 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
