--- a/wing-chun-dummy/sitemap.html
+++ b/wing-chun-dummy/sitemap.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Sitemap</title>
-<meta name="title" content="Sitemap - Understanding the Wing Chun Dummy: A Comprehensive Guide">
-<meta name="DC.title" lang="en" content="Sitemap - Understanding the Wing Chun Dummy: A Comprehensive Guide">
-<meta name="description" content="{Wing Chun, a traditional Chinese martial art, is renowned for its focus on close-range combat, efficient actions, and effective self-defense methods.|Wing Chun is a traditional Chinese martial art that focuses on close-range combat and efficient moves. ">
-<meta name="keywords" content="Understanding the Wing Chun Dummy: A Comprehensive Guide">
+<meta name="title" content="Sitemap - The Ultimate Handbook for Wing Chun For Dummies">
+<meta name="DC.title" lang="en" content="Sitemap - The Ultimate Handbook for Wing Chun For Dummies">
+<meta name="description" content="{Wing Chun, a traditional Chinese martial art, is renowned for its emphasis on close-range combat, efficient movements, and practical self-defense methods.|Wing Chun is a traditional Chinese martial art that emphasizes the use of close-range combat as well as efficient movements. ">
+<meta name="keywords" content="The Ultimate Handbook for Wing Chun For Dummies">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -18,68 +18,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.a3dbde3a7e63c7a0ba1a06384d85f8cc8{
+a{
+text-decoration: none!important;
+}
+.nav-link{
+color: #000000!important;
+
+}
+.dafe6e8a60d8b236f472ce6710b6bf8d4 a,.t532ab44fe30c7e22083c7d052f08f2c9 a{
+color:#131313!important;
+text-decoration: underline !important;
+}
+footer *{
+font-size:16px !important;
+}
+.t532ab44fe30c7e22083c7d052f08f2c9 a{
+font-size:16px;
+}
+.btn-md{
+padding: 15.4px 30.1px;
+border-radius: 0;
+}
+.dafe6e8a60d8b236f472ce6710b6bf8d4 p,.dafe6e8a60d8b236f472ce6710b6bf8d4 a,.dafe6e8a60d8b236f472ce6710b6bf8d4 span,.dafe6e8a60d8b236f472ce6710b6bf8d4 label{
+font-size:16px!important;
+}
+.xddb72b8c8bc7bb2c635f6954cdd3c14e{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+footer{
+background:#010101;
+color:#ffffff;
+}
+.c863fbfb3e223b2ad4454deccf53c8738:hover{
+box-shadow: 0 49.9px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
 .nav-item{
-padding-left:8.2px;
-padding-right:8px;
-padding-top:4.9px;
-padding-bottom:4.8px;
+padding-left:7.9px;
+padding-right:7.9px;
+padding-top:5px;
+padding-bottom:5.5px;
+}
+html{
+scroll-behavior: smooth;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
 .navbar a{
-font-size: 17.6px!important;
+font-size: 17.8px!important;
 font-weight: bold;
-}
-footer{
-background:#0f0f0f;
-color:#ffffff;
-}
-footer *{
-font-size:16px !important;
-}
-.y411bfe9c74e577f1e4030017053c9396 p,.y411bfe9c74e577f1e4030017053c9396 a,.y411bfe9c74e577f1e4030017053c9396 span,.y411bfe9c74e577f1e4030017053c9396 label{
-font-size:16px!important;
-}
-.x2e963ff68265da1d9c9352eaaf8df809:hover{
-box-shadow: 0 50.5px 50.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.y411bfe9c74e577f1e4030017053c9396 a,.z0d05b511c4674d666e04e9e9a8c68525 a{
-color:#0a0a0a!important;
-text-decoration: underline !important;
-}
-html{
-scroll-behavior: smooth;
-}
-.btn-md{
-padding: 14.9px 29.7px;
-border-radius: 0;
-}
-.nav-link{
-color: #000000!important;
-
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.z0d05b511c4674d666e04e9e9a8c68525 a{
-font-size:16px;
-}
-a{
-text-decoration: none!important;
-}
-.z0d05b511c4674d666e04e9e9a8c68525 p,.z0d05b511c4674d666e04e9e9a8c68525 span,.z0d05b511c4674d666e04e9e9a8c68525 label{
-font-size:16px!important;
 }
 ul{
 list-style: circle;
+}
+.t532ab44fe30c7e22083c7d052f08f2c9 p,.t532ab44fe30c7e22083c7d052f08f2c9 span,.t532ab44fe30c7e22083c7d052f08f2c9 label{
+font-size:16px!important;
 }
 </style>
 
@@ -109,9 +109,9 @@ list-style: circle;
 <a class="navbar-brand" href="index.html"  ><img alt="img/wing-chun-practicioner.png" src="img/wing-chun-practicioner.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="d-flex navbar-nav align-items-center ml-auto"><li class="nav-item ">
-<a class="y7c5350b46b930809f213663b6ab239ce nav-link" href="index.html"  >Understanding the Wing Chun Dummy: A Comprehensive Guide</a>
-</li><li class="nav-item"><a class="nav-link y7c5350b46b930809f213663b6ab239ce" rel=nofollow href="about-us.html">About Us</a>
+<ul class="d-flex align-items-center navbar-nav ml-auto"><li class="nav-item ">
+<a class="nav-link b407cdd1c30164bc98b2df4b4035f74dd" href="index.html"  >The Ultimate Handbook for Wing Chun For Dummies</a>
+</li><li class="nav-item"><a class="b407cdd1c30164bc98b2df4b4035f74dd nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -133,21 +133,21 @@ list-style: circle;
 </div>
 </section>
 <footer>
-<div class="container py-4 pt-5" >
+<div class="container pt-5 py-4" >
 <div class="row"><div class="col-lg-3">
 <p>myKarateStore.com</p>
 <p>Phone : (720)593-9512</p>
 <p>Email : sales@mykaratestore.com</p>
-<p>Company Website : <a class="y7c5350b46b930809f213663b6ab239ce" href="https://www.mykaratestore.com/1" rel="nofollow">https://www.mykaratestore.com/1</a></p>
-</div><div class="col-lg-3"><p><a class="y7c5350b46b930809f213663b6ab239ce" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="y7c5350b46b930809f213663b6ab239ce" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="y7c5350b46b930809f213663b6ab239ce" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="b407cdd1c30164bc98b2df4b4035f74dd" href="https://www.mykaratestore.com/1" rel="nofollow">https://www.mykaratestore.com/1</a></p>
+</div><div class="col-lg-3"><p><a class="b407cdd1c30164bc98b2df4b4035f74dd" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="b407cdd1c30164bc98b2df4b4035f74dd" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="b407cdd1c30164bc98b2df4b4035f74dd" href="about-us.html" rel="nofollow">About Us</a></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/Mykaratestore/" class="ace7c7426045179eb178ba5bb1e0255f9 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://twitter.com/myKarateStore" class="twitter ace7c7426045179eb178ba5bb1e0255f9" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/Mykaratestore/" class="facebook xcf06a8ff3b7c98054ff8a532a498e663" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://twitter.com/myKarateStore" class="xcf06a8ff3b7c98054ff8a532a498e663 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
